test/ClangImporter/bad-ns-extensible-string-enum.code
// RUN: %target-language-frontend(mock-sdk: %clang-importer-sdk) -typecheck %s -enable-objc-interop -import-objc-header %S/Inputs/bad-ns-extensible-string-enum.h -verify

immutable string = MyString.MyStringOne // expected-error {{cannot find 'MyString' in scope}}
